dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tasks__tests__send_socket_assembler__cancelled_frame_emitted_when_completion_is_cancelled.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 TRACE c#test.pending.enq=1
0:00:00.000000000 TRACE g#test.pending.depth=1
0:00:00.000000000 TRACE m#test.pending.depth_dist=1
0:00:00.000000000 TRACE c#test.pending.drain=1
0:00:00.000000000 TRACE g#test.pending.depth=0
0:00:00.000000000 DEBUG all output assertions passed
